--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,8 @@
 {
+	// Is git enabled (true, false)
+	//"git.enabled": true,
+	// Path to the git executable.
+	//"git.path": "C:\\PortableGit\\cmd\\git.exe",
 	"git.ignoreMissingGitWarning": true,
 	"update.channel": "none",
 	"update.mode": "none",
